fix: add extra bottom padding on mobile devices

--- a/src/js/components/FilterBar/FilterBar.less
+++ b/src/js/components/FilterBar/FilterBar.less
@@ -9,7 +9,6 @@
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   border: 1px solid #545454;
-  border-bottom: none;
   padding: 10px;
   font-family: 'Rubik Mono One', sans-serif;
   line-height: 22px;
@@ -32,4 +31,7 @@
   border: 1px solid #545454;
   border-top: none;
   width: 100%;
+  @media screen and (max-width: 800px) {
+    padding-bottom: 200px;
+  }
 }
